--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ a:hover {
     background: #ffffff;
     border: 1px solid #dddddd;
     margin-top: 100px;
+    overflow: auto;
 
 }
 
@@ -114,4 +115,27 @@ a:hover {
     text-align: center;
     padding: 12px;
     margin: 12px;
+}
+
+.bodystuff {
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+#btn {
+    background-color: teal; 
+    color: white; 
+    border: none; 
+    width: 50px; 
+    padding: 5px; 
+    text-align: center; 
+    margin: 10px 10px 10px 0px;
+}
+
+.box {
+    width: 95%;
+}
+
+canvas {
+    border: 1px solid black;
 }
